samples/_failures_safe/1761071258_fc17f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6027828.c: In function ‘main’:
./samples/SAFE/__tmp_b6027828.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
